# Ouroboros

./: .gitignore
Bash/: apple.sh  game.sh  gui.sh  main.sh  snake.sh
C/: .clang-format  CMakeLists.txt  main.c
C/include/: apple.h  game.h  gui.h  input.h  makros.h  node.h  rng.h  sleep.h  snake.h  terminal.h
CPP/: CMakeLists.txt  main.cpp
CPP/include/: apple.hpp  game.hpp  gui.hpp  input.hpp  makros.hpp  node.hpp  rng.hpp  snake.hpp  terminal.hpp
CSharp/: Ouroboros.csproj  Ouroboros.slnx  Program.cs
CSharp/include/: Apple.cs  GUI.cs  Game.cs  Input.cs  Node.cs  RNGMachine.cs  Snake.cs  Terminal.cs  Time.cs
Fortran/: Makefile  apple_module.f90  game_module.f90  gui_module.f90  input_c.c  input_module.f90  main.f90  ouroboros  sleep_c.c  sleep_module.f90  snake_module.f90  terminal_module.f90  types_module.f90
Go/: go.mod  main.go
Go/include/: apple.go  game.go  gui.go  input.go  input_unix.go  input_windows.go  node.go  rng.go  sleep.go  snake.go  terminal.go
Java/: pom.xml  run.ps1
Kotlin/: .gitignore  build.gradle.kts  settings.gradle.kts
Kotlin/app/: build.gradle.kts
PHP/Neuronal Networks/: autoload.php
PHP/NeuronalNetworks/: main.php  test_matrix.php
Pascal/: apple.pas  game.pas  gui.pas  main  main.pas  map.pas  node.pas  snake.pas  test.php
Pascal/NeuralNetwork/: SLMChat  SLMChat.pas  SLMTrain  SLMTrain.pas  UCCActivations.pas  UCCLayers.pas  UCCLosses.pas  UCCMatrix.pas  UCCNetwork.pas  UCCOptimizers.pas  UCCTokenizer.pas  UCCTypes.pas  XORTest  XORTest.pas
PowerShell/: Apple.psm1  GUI.psm1  Game.psm1  Input.psm1  Main.ps1  Node.psm1  Snake.psm1  Terminal.psm1
Python/: apple.py  game.py  gui.py  input.py  main.py  node.py  sleep.py  snake.py  terminal.py
Rust/: Cargo.toml
Swift/: Package.swift
Typescript/: package-lock.json  package.json  tsconfig.json
lua/: apple.lua  game.lua  gui.lua  input.lua  main.lua  node.lua  sleep.lua  snake.lua  terminal.lua
(+68 files in other folders)
